# image_processing

./: .gitignore  CMakeLists.txt  LICENSE
shared/: CMakeLists.txt  SharedLib.cc  SharedLib.h
testbin/: CMakeLists.txt  test.cc
